--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@lavapayments/checkout": "^0.1.3",
+    "@lavapayments/nodejs": "^6.0.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
